Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59500

QObject::disconnectNotify() is not called

    XMLWordPrintable

Details

    • 972580accdd0732b33947e8b1ca0ba8943041bdc, 1cf75af3f2f3430bab11f9ef1eea5deb4c59aa2e

    Description

      disconnectNotify() is not called after a signal has been disconnected.

      QMetaObject::Connection conn = QObject::connect(myObject, &MyObject;::someSignal, this, [this]()
      {
      });
      
      QObject::disconnect(conn);
      // Or disconnect(myObject, SIGNAL(someSignal()), 0, 0);
      
      void MyObject::disconnectNotify(const QMetaMethod&)
      {
      // function not called
      }
      
      
      
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            irfan.omair@digia.com Irfan Omair
            Votes:
            5 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes