Call disconnectNotify() when disconnecting a QMetaObject::Connection

In all other forms of disconnecting this is done. We also know the
signal index, so there is no reason not to do this.

Change-Id: Ic8b042cd8f45dbff74b42ee30c384a84bef78b20
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>
(cherry picked from commit 972580accdd0732b33947e8b1ca0ba8943041bdc)
Task-number: QTBUG-59500
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>